Button size change to benefit smartphone users

--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -74,10 +74,16 @@ a {
   }
 
   @include small {
+    /* this makes the buttons three-wide 
+       on a narrow viewport, e.g. a phone */
+    width: 30%;
+    padding: 0.6rem;
+    /* original...
     display: block;
     width: 100%;
     padding: 0.75rem;
     font-size: 0.9rem;
+    */
 
     + .btn {
       margin-top: 1rem;
