--- a/Code Examples/week6/angular-components-example/src/app/header.component.html
+++ b/Code Examples/week6/angular-components-example/src/app/header.component.html
@@ -1,5 +1,7 @@
 <div class="header">
   <div class="row">
-    <h3>Animals are awesome!</h3>
+    <div class="col-md-12">
+      <h3>Animals are awesome!</h3>
+    </div>
   </div>
 </div>
