--- a/Code Examples/week7/angular-routing-example/src/app/footer.component.html
+++ b/Code Examples/week7/angular-routing-example/src/app/footer.component.html
@@ -1,10 +1,10 @@
 <div class="footer">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-12">
-        <p class="pull-right">Copyright &copy; 2018 - Seneca BTI425. All rights reserved.</p>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-12">
+          <p>Copyright &copy; {{today | date:'yyyy'}} - Web.Next group. All rights reserved.</p>
+        </div>
       </div>
     </div>
+  
   </div>
-
-</div>
