--- a/Code Examples/week11/simple-app-complete/simpleApp/src/app/nav/nav.component.html
+++ b/Code Examples/week11/simple-app-complete/simpleApp/src/app/nav/nav.component.html
@@ -16,6 +16,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li routerLinkActive="active"><a routerLink="home">Home</a></li>
         <li routerLinkActive="active"><a routerLink="vehicles">Vehicles</a></li>
+        <li routerLinkActive="active"><a routerLink="login">Login</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
