--- a/Code Examples/week11/simple-app/simpleApp/src/app/home/home.component.html
+++ b/Code Examples/week11/simple-app/simpleApp/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-12">
-    <div class="jumbotron">
-      <h1>Welcome Home</h1>
+    <div class="well">
+      <h2>Welcome Home</h2>
       <p>Click "Vehicles" to view our extensive collection of vehicles</p>
     </div>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nec volutpat ante. Suspendisse pharetra laoreet mauris a dapibus. Sed non dolor et mi tincidunt dignissim eget sit amet est. In nec porta mi. Integer porta dictum ullamcorper. Ut ac maximus lorem, quis consectetur ex. Morbi semper, risus et elementum tristique, leo nibh sodales purus, sed tempor purus quam ac purus. Proin placerat suscipit bibendum. Morbi imperdiet id erat id congue. Etiam vitae cursus quam. Nulla aliquam luctus leo. Curabitur sed orci viverra sem laoreet consequat. Maecenas at viverra tortor, ut laoreet diam. Donec ac hendrerit mauris. Suspendisse vestibulum nulla sit amet dolor viverra, id ultricies tellus finibus.</p>
