--- a/Code Examples/week9/angular-forms-example/src/app/footer.component.html
+++ b/Code Examples/week9/angular-forms-example/src/app/footer.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-12">
-        <p class="pull-right">Copyright &copy; 2017 - Web.next group, all rights reserved.</p>
+        <p>Copyright &copy; {{today | date:'yyyy'}} - Web.Next group. All rights reserved.</p>
       </div>
     </div>
   </div>
