--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,3 @@
-changes... changed theme from jekyll-theme-cayman to jekyll-theme-minimal in config.yml
-
-renamed assets/css/style.css to css
-
-
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: " en-US " }}">
 
@@ -39,10 +34,10 @@ renamed assets/css/style.css to css
 
             <!-- <p>current - {{ current[1] }}</p> -->
 
-                    <a href="https://sictweb.github.io/web422/weekly-schedule">{% if current[1] == 'schedule' %}class='btn active'{% else %}class='btn'{% endif %}>Schedule</a>
-        <a href="https://sictweb.github.io/web422/notes/">{% if current[1] == 'notes' %}class='btn active'{% else %}class='btn'{% endif %}>Notes</a>
-        <a href="https://sictweb.github.io/web422/resources">{% if current[1] == 'notes' %}class='btn active'{% else %}class='btn'{% endif %}>Resources</a>
-        <a href="https://sictweb.github.io/web422/graded-work">{% if current[1] == 'gradedWork' %}class='btn active'{% else %}class='btn'{% endif %}>Graded Work</a>
+                    <a href="https://sictweb.github.io/web422/weekly-schedule" {% if current[1] == 'schedule' %}class='btn active'{% else %}class='btn'{% endif %}>Schedule</a>
+        <a href="https://sictweb.github.io/web422/notes/" {% if current[1] == 'notes' %}class='btn active'{% else %}class='btn'{% endif %}>Notes</a>
+        <a href="https://sictweb.github.io/web422/resources" {% if current[1] == 'notes' %}class='btn active'{% else %}class='btn'{% endif %}>Resources</a>
+        <a href="https://sictweb.github.io/web422/graded-work" {% if current[1] == 'gradedWork' %}class='btn active'{% else %}class='btn'{% endif %}>Graded Work</a>
             <a href="{{ site.github.repository_url }}" target="_blank">Code examples</a>
 
             
