--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
         <a href="https://sictweb.github.io/web422/notes/" {% if current[1] == 'notes' %}class='btn active'{% else %}class='btn'{% endif %}>Notes</a>
         <a href="https://sictweb.github.io/web422/resources" {% if current[1] == 'notes' %}class='btn active'{% else %}class='btn'{% endif %}>Resources</a>
         <a href="https://sictweb.github.io/web422/graded-work" {% if current[1] == 'gradedWork' %}class='btn active'{% else %}class='btn'{% endif %}>Graded Work</a>
-            <a href="{{ site.github.repository_url }}" target="_blank">Code examples</a>
+            <a href="{{ site.github.repository_url }}" class='btn' target="_blank">Code examples</a>
 
             
             <!-- {% if site.github.is_project_page %}
