--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,7 @@
                     <a href="https://sictweb.github.io/web422/weekly-schedule" {% if current[1] == 'weekly-schedule.html' %}class='btn active'{% else %}class='btn'{% endif %}>Schedule</a>
         <a href="https://sictweb.github.io/web422/notes/" {% if current[1] == 'notes' %}class='btn active'{% else %}class='btn'{% endif %}>Notes</a>
         <a href="https://sictweb.github.io/web422/resources" {% if current[1] == 'resources.html' %}class='btn active'{% else %}class='btn'{% endif %}>Resources</a>
+        <a href="/web422/lab-instructions" {% if current[1] == 'lab-instructions.html' %}class='btn active'{% else %}class='btn'{% endif %}>MyApps Instructions</a>
         <a href="https://sictweb.github.io/web422/graded-work" {% if current[1] == 'graded-work.html' %}class='btn active'{% else %}class='btn'{% endif %}>Graded Work</a>
             <a href="{{ site.github.repository_url }}" class='btn' target="_blank">Code examples</a>
 
