moved old content to 2019 folder

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,11 +35,11 @@
             <!-- <p>current - {{ current[1] }}</p> -->
 
                     <a href="/weekly-schedule" {% if current[1] == 'weekly-schedule.html' %}class='btn active'{% else %}class='btn'{% endif %}>Schedule</a>
-        <a href="/notes/2020" {% if current[1] == 'notes' %}class='btn active'{% else %}class='btn'{% endif %}>Notes</a>
+        <a href="/notes" {% if current[1] == 'notes' %}class='btn active'{% else %}class='btn'{% endif %}>Notes</a>
         <a href="/resources" {% if current[1] == 'resources.html' %}class='btn active'{% else %}class='btn'{% endif %}>Resources</a>
         <a href="/lab-instructions" {% if current[1] == 'lab-instructions.html' %}class='btn active'{% else %}class='btn'{% endif %}>MyApps Instructions</a>
         <a href="/graded-work" {% if current[1] == 'graded-work.html' %}class='btn active'{% else %}class='btn'{% endif %}>Graded Work</a>
-            <a href="https://github.com/sictweb/web422/tree/master/Code%20Examples%202020" class='btn' target="_blank">Code examples</a>
+            <a href="https://github.com/sictweb/web422/tree/master/Code%20Examples" class='btn' target="_blank">Code examples</a>
 
             
             <!-- {% if site.github.is_project_page %}
