--- a/Code Examples/week8/week8-app/src/app/app.component.html
+++ b/Code Examples/week8/week8-app/src/app/app.component.html
@@ -1,16 +1,42 @@
-<h1>Static Post</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <h3>Static Post</h3><br>
 
-<table border="1">
-  <tr>
-    <th>ID</th>
-    <th>User ID</th>
-    <th>Title</th>
-    <th>Body</th>
-  </tr>
-  <tr>
-    <td>{{staticPost.id}}</td>
-    <td>{{staticPost.userId}}</td>
-    <td>{{staticPost.title}}</td>
-    <td>{{staticPost.body}}</td>
-  </tr>
-</table>
+      <table class="table">
+        <tr>
+          <th>ID</th>
+          <th>User ID</th>
+          <th>Title</th>
+          <th>Body</th>
+        </tr>
+        <tr>
+          <td>{{staticPost.id}}</td>
+          <td>{{staticPost.userId}}</td>
+          <td>{{staticPost.title}}</td>
+          <td>{{staticPost.body}}</td>
+        </tr>
+      </table>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+      <h3>Live Posts</h3><br>
+
+      <table class="table">
+        <tr>
+          <th>ID</th>
+          <th>User ID</th>
+          <th>Title</th>
+          <th>Body</th>
+        </tr>
+        <tr *ngFor="let post of posts">
+          <td>{{post.id}}</td>
+          <td>{{post.userId}}</td>
+          <td>{{post.title}}</td>
+          <td>{{post.body}}</td>
+        </tr>
+      </table>
+    </div>
+  </div>
+</div>
