--- a/_layouts/examplenav.html
+++ b/_layouts/examplenav.html
@@ -2,10 +2,10 @@
 layout: default
 ---
 <ul>
-  <li><a href="/web422/">Home</a></li>
-  <li><a href="/web422/about">About</a></li>
-  <li><a href="/web422/cv">CV</a></li>
-  <li><a href="/web422/blog">Blog</a></li>
+  <li><a href="/">Home</a></li>
+  <li><a href="/about">About</a></li>
+  <li><a href="/cv">CV</a></li>
+  <li><a href="/blog">Blog</a></li>
 </ul>
 <div>
 {{ content }}
