fix link to code examples

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
         <a href="/resources" {% if current[1] == 'resources.html' %}class='btn active'{% else %}class='btn'{% endif %}>Resources</a>
         <a href="/lab-instructions" {% if current[1] == 'lab-instructions.html' %}class='btn active'{% else %}class='btn'{% endif %}>MyApps Instructions</a>
         <a href="/graded-work" {% if current[1] == 'graded-work.html' %}class='btn active'{% else %}class='btn'{% endif %}>Graded Work</a>
-            <a href="https://github.com/sictweb/WEB422/tree/master/Code%20Examples" class='btn' target="_blank">Code examples</a>
+            <a href="https://github.senecacollege.ca/SDDS/web422/tree/master/Code%20Examples" class='btn' target="_blank">Code examples</a>
 
             
             <!-- {% if site.github.is_project_page %}
