--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,11 +34,11 @@
 
             <!-- <p>current - {{ current[1] }}</p> -->
 
-                    <a href="/weekly-schedule" {% if current[1] == 'weekly-schedule.html' %}class='btn active'{% else %}class='btn'{% endif %}>Schedule</a>
-        <a href="/notes" {% if current[1] == 'notes' %}class='btn active'{% else %}class='btn'{% endif %}>Notes</a>
-        <a href="/resources" {% if current[1] == 'resources.html' %}class='btn active'{% else %}class='btn'{% endif %}>Resources</a>
-        <a href="/lab-instructions" {% if current[1] == 'lab-instructions.html' %}class='btn active'{% else %}class='btn'{% endif %}>MyApps Instructions</a>
-        <a href="/graded-work" {% if current[1] == 'graded-work.html' %}class='btn active'{% else %}class='btn'{% endif %}>Graded Work</a>
+                    <a href="{{ site.baseurl }}/weekly-schedule" {% if current[1] == 'weekly-schedule.html' %}class='btn active'{% else %}class='btn'{% endif %}>Schedule</a>
+        <a href="{{ site.baseurl }}/notes" {% if current[1] == 'notes' %}class='btn active'{% else %}class='btn'{% endif %}>Notes</a>
+        <a href="{{ site.baseurl }}/resources" {% if current[1] == 'resources.html' %}class='btn active'{% else %}class='btn'{% endif %}>Resources</a>
+        <a href="{{ site.baseurl }}/lab-instructions" {% if current[1] == 'lab-instructions.html' %}class='btn active'{% else %}class='btn'{% endif %}>MyApps Instructions</a>
+        <a href="{{ site.baseurl }}/graded-work" {% if current[1] == 'graded-work.html' %}class='btn active'{% else %}class='btn'{% endif %}>Graded Work</a>
             <a href="https://github.com/patrick-crawford/WEB422-Backup/tree/master/Code%20Examples" class='btn' target="_blank">Code examples</a>
 
             
