fixed typo in link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
             <!-- <p>{{ site.description | default: site.github.project_tagline }}</p> -->
 
             <p><img src="https://raw.githubusercontent.com/sictweb/resources/master/logo-sict-v1.png" alt="SICT" /></p>
-            <h1><a href="{{ site.baseurl }}/">WEB422</a></h1>
+            <h1><a href="{{ site.baseurl }}">WEB422</a></h1>
             <p>Web Programming for Apps and Services</p>
 
             {% assign current = page.url | downcase | split: '/' %}
